# opentelemetry-examples

./: .gitignore  CLAUDE.md  LICENSE  PACKAGE_MATRIX.md  README.md  READMEf.md  index.php  tox.ini
.github/: README.md
.github/workflows/: test-and-update.yml  test-matrix.yml
android/: .gitignore  README.md  local.properties.example  settings.gradle.kts
android-rum-activity-init/: .gitignore  README.md  local.properties.example  settings.gradle.kts
android-rum-activity-init/app/: build.gradle.kts  proguard-rules.pro
android-rum-activity-init/gradle/: libs.versions.toml
android-rum-jitpack-resolve/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
angular/: .env.example  .gitignore  ANGULAR_SETUP_INSTRUCTIONS.md  README.md  angular.json  package-lock.json  package.json  setup.sh  tsconfig.json
angular/src/: environment.prod.ts  environment.ts  index.html  main.ts  styles.css  telemetry.ts
api/: logs.py  query-log-api.py  query-metric-api.sh
cline/: README.md  docker-compose.yaml  otel-collector-config.yaml
cloudflare-tunnel/: .env.example  README.md  docker-compose.test.yml  docker-compose.yml  otel-collector-config.yaml
codex/: .gitignore  README.md  docker-compose.yaml  otel-collector-config.yaml
cpp/: .env.example  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp  run.sh
datadog-k8s-operator/: README.md
dd-agent/: Dockerfile  Gemfile  README.md  app.rb
docker-compose/: README.md  apache-compose.yaml  nginx-compose.yaml  nginx-default.conf  otel-compose.yaml  otel-config.yaml
dotnet/: README.md
gemini-cli/: .env.example  README.md  docker-compose.yaml  otel-collector-config.yaml
goose/: README.md  docker-compose.yaml  otel-collector-config.yaml
gpu-telemetry/: README.md  collector-config.yaml  deploy.sh  values.yaml
ios/: .env.example  .gitignore  Config-Debug.xcconfig  Config-Release.xcconfig  Package.resolved  Package.swift  Podfile  README.md  Secrets.example.xcconfig  project.yml
ios-rum-spm-demo/: .gitignore  Package.swift  README.md  Secrets.example.xcconfig  project.yml
java-vertx-rxjava/: .env.example  .gitignore  DOCS.md  README.md  dependency-reduced-pom.xml  otel-collector-config.yaml  pom.xml
java-vertx3-rxjava/: .gitignore
kong/: README.md  docker-compose.yaml  otel-config.yaml
openresty/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  otel-collector-config.yaml
php/: .gitignore  README.md
postgres/: README.md  docker-compose.yaml  otel-collector-config.yaml  queries.yaml
react/: .env.example  README.md  package-lock.json  package.json
react-native/: .env.example  .gitignore  App.tsx  README.md  app.json  env.d.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
react-stripe/: README.md  docker-compose.yaml
rust/axum/: .env.example  .gitignore  Cargo.toml  README.md
rust/axum/src/: main.rs  main.rs.test
sophos-integration/: Dockerfile  README.md  api_client.py  config.ini.template  otel-collector-config.yaml  requirements.txt  run.sh  siem.py
(+1694 files in other folders)
