[package]
name = "rust-axum-otel"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
otel-rust-axum = { git = "https://github.com/last9/otel-rust-axum", features = ["axum", "reqwest", "db"] }

# Axum 0.6 — axum 0.7+ requires Rust 1.75
axum = "0.6"
tokio = { version = "1", features = ["full"] }

# HTTP client — only needed for Response type + .json()
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }

# SQLite — bundled compiles SQLite from source, no system dep needed
rusqlite = { version = "0.31", features = ["bundled"] }

# GraphQL — last version with axum 0.6 support
# Use the "tracing" feature, NOT "opentelemetry" — the opentelemetry feature
# pins otel 0.21 which conflicts with our otel 0.27.
async-graphql      = { version = "6.0.11", features = ["tracing"] }
async-graphql-axum = "6.0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Tracing macros (info!, error!, etc.)
tracing = "0.1"

# Transitive-dep pins required on Rust < 1.83 / < 1.82
# async-graphql → handlebars → pest* require Rust 1.83 at latest versions
pest           = "=2.7.15"
pest_derive    = "=2.7.15"
pest_generator = "=2.7.15"
pest_meta      = "=2.7.15"
# async-graphql → indexmap requires Rust 1.82 at latest version
indexmap = "=2.6.0"
# url 2.5.1+ and idna 1.0+ pull in icu4x which requires Rust 1.83
url  = "=2.5.0"
idna = "=0.5.0"
